version funcionalos gets pero el post no
