# routes/api.php
@@ -6,3 +6,4 @@ use App\Http\Controllers\ProyectoControllerSwagger;
 
 Route::get('/proyectos', [ProyectoControllerSwagger::class, 'index']);
 Route::get('/proyectos/{proye}', [ProyectoControllerSwagger::class, 'show']);
+Route::post('/proyectos', [ProyectoControllerSwagger::class, 'store']);
